Avance en formulario de registrar tareas

--- a/src/input.css
+++ b/src/input.css
@@ -5,6 +5,8 @@
     --color-regal-purple: #6841F3;
     --color-regal-nav: #FFFFFF;
     --color-regal-body: #F2FAFF;
+    --color-select-green: #F0F3EA;
+    --color-labels-green:#A9B48C;
 
     --font-roboto: 'Roboto', sans-serif;
     --font-oswald: 'Oswald', sans-serif;
