--- a/src/input.css
+++ b/src/input.css
@@ -7,6 +7,7 @@
     --color-regal-body: #F2FAFF;
     --color-select-green: #F0F3EA;
     --color-labels-green:#A9B48C;
+    --color-button-green:#C3EF6F;
 
     --font-roboto: 'Roboto', sans-serif;
     --font-oswald: 'Oswald', sans-serif;
