--- a/src/output.css
+++ b/src/output.css
@@ -7,8 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-blue-500: oklch(62.3% 0.214 259.815);
-    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -19,9 +17,9 @@
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-bold: 700;
-    --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
+    --radius-3xl: 1.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-regal-green: #d9f275;
@@ -29,6 +27,7 @@
     --color-regal-body: #F2FAFF;
     --color-select-green: #F0F3EA;
     --color-labels-green: #A9B48C;
+    --color-button-green: #C3EF6F;
     --font-roboto: 'Roboto', sans-serif;
     --font-oswald: 'Oswald', sans-serif;
   }
@@ -220,6 +219,12 @@
   .grid {
     display: grid;
   }
+  .inline {
+    display: inline;
+  }
+  .inline-block {
+    display: inline-block;
+  }
   .table {
     display: table;
   }
@@ -296,8 +301,8 @@
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
-  .rounded-md {
-    border-radius: var(--radius-md);
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
@@ -306,11 +311,11 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-gray-300 {
-    border-color: var(--color-gray-300);
+  .border-select-green {
+    border-color: var(--color-select-green);
   }
-  .bg-blue-500 {
-    background-color: var(--color-blue-500);
+  .bg-button-green {
+    background-color: var(--color-button-green);
   }
   .bg-regal-body {
     background-color: var(--color-regal-body);
@@ -333,8 +338,17 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
+  }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
   }
   .p-7 {
     padding: calc(var(--spacing) * 7);
@@ -347,6 +361,9 @@
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
+  }
+  .pl-2 {
+    padding-left: calc(var(--spacing) * 2);
   }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
@@ -401,9 +418,15 @@
       }
     }
   }
-  .focus\:border-blue-500 {
+  .focus\:border-2 {
     &:focus {
-      border-color: var(--color-blue-500);
+      border-style: var(--tw-border-style);
+      border-width: 2px;
+    }
+  }
+  .focus\:border-labels-green {
+    &:focus {
+      border-color: var(--color-labels-green);
     }
   }
   .focus\:ring-2 {
@@ -412,9 +435,9 @@
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
-  .focus\:ring-blue-500 {
+  .focus\:ring-labels-green {
     &:focus {
-      --tw-ring-color: var(--color-blue-500);
+      --tw-ring-color: var(--color-labels-green);
     }
   }
   .focus\:outline-none {
