--- a/src/input.css
+++ b/src/input.css
@@ -11,6 +11,7 @@
 
     --font-roboto: 'Roboto', sans-serif;
     --font-oswald: 'Oswald', sans-serif;
+    --font-urbanist: 'Urbanist', sans-serif;
 }
 
 @font-face {
@@ -24,6 +25,14 @@
 @font-face {
     font-family: 'Oswald' ;
     src: url(./Oswald-VariableFont_wght.woff2) format('woff2');
+    font-style: normal;
+    font-weight: 100 700;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Urbanist' ;
+    src: url(./Urbanist-VariableFont_wght.woff2) format('woff2');
     font-style: normal;
     font-weight: 100 700;
     font-display: swap;
