Avance en agregar alumno con formulario

--- a/src/input.css
+++ b/src/input.css
@@ -8,6 +8,7 @@
     --color-select-green: #F0F3EA;
     --color-labels-green:#A9B48C;
     --color-button-green:#C3EF6F;
+    --color-form-gray:#F3F5F9
 
     --font-roboto: 'Roboto', sans-serif;
     --font-oswald: 'Oswald', sans-serif;
