--- a/src/output.css
+++ b/src/output.css
@@ -7,8 +7,9 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-200: oklch(92.4% 0.12 95.746);
+    --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-gray-100: oklch(96.7% 0.003 264.542);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -26,6 +27,8 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-light: 300;
     --font-weight-bold: 700;
+    --radius-sm: 0.25rem;
+    --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
@@ -37,6 +40,8 @@
     --color-select-green: #F0F3EA;
     --color-labels-green: #A9B48C;
     --color-button-green: #C3EF6F;
+    --color-form-gray: #F3F5F9
+
     --font-roboto: 'Roboto', sans-serif;
     --font-oswald: 'Oswald', sans-serif;
     --font-urbanist: 'Urbanist', sans-serif;
@@ -220,8 +225,8 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
   }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
@@ -229,20 +234,11 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-20 {
-    margin-top: calc(var(--spacing) * 20);
-  }
   .mt-22 {
     margin-top: calc(var(--spacing) * 22);
   }
-  .mt-24 {
-    margin-top: calc(var(--spacing) * 24);
-  }
-  .mt-28 {
-    margin-top: calc(var(--spacing) * 28);
-  }
-  .mt-32 {
-    margin-top: calc(var(--spacing) * 32);
+  .mr-52 {
+    margin-right: calc(var(--spacing) * 52);
   }
   .ml-3 {
     margin-left: calc(var(--spacing) * 3);
@@ -250,11 +246,11 @@
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
+  .ml-8 {
+    margin-left: calc(var(--spacing) * 8);
+  }
   .ml-14 {
     margin-left: calc(var(--spacing) * 14);
-  }
-  .ml-20 {
-    margin-left: calc(var(--spacing) * 20);
   }
   .ml-32 {
     margin-left: calc(var(--spacing) * 32);
@@ -296,8 +292,8 @@
   .w-screen {
     width: 100vw;
   }
-  .min-w-80 {
-    min-width: calc(var(--spacing) * 80);
+  .min-w-64 {
+    min-width: calc(var(--spacing) * 64);
   }
   .flex-grow {
     flex-grow: 1;
@@ -310,6 +306,9 @@
   }
   .resize {
     resize: both;
+  }
+  .grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
@@ -353,6 +352,9 @@
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
+  .gap-x-8 {
+    column-gap: calc(var(--spacing) * 8);
+  }
   .rounded {
     border-radius: 0.25rem;
   }
@@ -362,6 +364,12 @@
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
@@ -369,9 +377,28 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
+  }
+  .border-black {
+    border-color: var(--color-black);
+  }
+  .border-black\/40 {
+    border-color: color-mix(in srgb, #000 40%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-black) 40%, transparent);
+    }
+  }
+  .border-black\/50 {
+    border-color: color-mix(in srgb, #000 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-black) 50%, transparent);
+    }
   }
   .border-labels-green {
     border-color: var(--color-labels-green);
@@ -379,14 +406,26 @@
   .border-select-green {
     border-color: var(--color-select-green);
   }
-  .bg-amber-200 {
-    background-color: var(--color-amber-200);
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-button-green {
     background-color: var(--color-button-green);
   }
+  .bg-form-gray {
+    background-color: var(--color-form-gray);
+  }
+  .bg-form-gray\/100 {
+    background-color: var(--color-form-gray);
+  }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
+  }
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
+  }
+  .bg-labels-green {
+    background-color: var(--color-labels-green);
   }
   .bg-regal-body {
     background-color: var(--color-regal-body);
@@ -445,9 +484,6 @@
   .font-oswald {
     font-family: var(--font-oswald);
   }
-  .font-roboto {
-    font-family: var(--font-roboto);
-  }
   .font-urbanist {
     font-family: var(--font-urbanist);
   }
@@ -501,10 +537,21 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .outline-blue-400 {
+    outline-color: var(--color-blue-400);
+  }
   .hover\:bg-regal-green {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-regal-green);
+      }
+    }
+  }
+  .hover\:font-bold {
+    &:hover {
+      @media (hover: hover) {
+        --tw-font-weight: var(--font-weight-bold);
+        font-weight: var(--font-weight-bold);
       }
     }
   }
