--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.5 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.7 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -210,6 +210,9 @@
   .col-span-4 {
     grid-column: span 4 / span 4;
   }
+  .row-span-2 {
+    grid-row: span 2 / span 2;
+  }
   .row-span-4 {
     grid-row: span 4 / span 4;
   }
@@ -222,6 +225,9 @@
   .m-2 {
     margin: calc(var(--spacing) * 2);
   }
+  .-mt-16 {
+    margin-top: calc(var(--spacing) * -16);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -233,6 +239,15 @@
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-12 {
+    margin-top: calc(var(--spacing) * 12);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
+  .mt-18 {
+    margin-top: calc(var(--spacing) * 18);
   }
   .mt-22 {
     margin-top: calc(var(--spacing) * 22);
@@ -263,9 +278,6 @@
   }
   .grid {
     display: grid;
-  }
-  .table {
-    display: table;
   }
   .size-6 {
     width: calc(var(--spacing) * 6);
@@ -298,14 +310,8 @@
   .flex-grow {
     flex-grow: 1;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -327,9 +333,6 @@
   }
   .justify-center {
     justify-content: center;
-  }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
   }
   .gap-0\.5 {
     gap: calc(var(--spacing) * 0.5);
@@ -385,19 +388,10 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
-  .border-black {
-    border-color: var(--color-black);
-  }
   .border-black\/40 {
     border-color: color-mix(in srgb, #000 40%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-black) 40%, transparent);
-    }
-  }
-  .border-black\/50 {
-    border-color: color-mix(in srgb, #000 50%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      border-color: color-mix(in oklab, var(--color-black) 50%, transparent);
     }
   }
   .border-labels-green {
@@ -406,26 +400,11 @@
   .border-select-green {
     border-color: var(--color-select-green);
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
   .bg-button-green {
     background-color: var(--color-button-green);
   }
-  .bg-form-gray {
-    background-color: var(--color-form-gray);
-  }
-  .bg-form-gray\/100 {
-    background-color: var(--color-form-gray);
-  }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
-  }
-  .bg-gray-300 {
-    background-color: var(--color-gray-300);
-  }
-  .bg-labels-green {
-    background-color: var(--color-labels-green);
   }
   .bg-regal-body {
     background-color: var(--color-regal-body);
@@ -441,9 +420,6 @@
   }
   .object-contain {
     object-fit: contain;
-  }
-  .p-0 {
-    padding: calc(var(--spacing) * 0);
   }
   .p-0\.5 {
     padding: calc(var(--spacing) * 0.5);
@@ -525,17 +501,10 @@
   .text-labels-green {
     color: var(--color-labels-green);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .placeholder-labels-green {
     &::placeholder {
       color: var(--color-labels-green);
     }
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .outline-blue-400 {
     outline-color: var(--color-blue-400);
@@ -614,11 +583,6 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-shadow {
   syntax: "*";
   inherits: false;
@@ -689,7 +653,6 @@
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
